force-app/main/default/objects/OrderItem/fields/FullPrice__c.field-meta.xml
<CustomField>
    <fullName>FullPrice__c</fullName>
    <label>Full Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>