force-app/main/default/objects/OrderItem/fields/IsOnTotvs__c.field-meta.xml
<CustomField>
    <fullName>IsOnTotvs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is On Totvs</label>
    <type>Checkbox</type>
</CustomField>