force-app/main/default/objects/OrderItem/validationRules/PriceAndQuantityNotZero.validationRule-meta.xml
<ValidationRule>
    <fullName>PriceAndQuantityNotZero</fullName>
    <active>true</active>
    <errorConditionFormula>(UnitPrice &lt;= 0) || (Quantity &lt;= 0)</errorConditionFormula>
    <errorMessage>Please specify a valid price and quantity.</errorMessage>
</ValidationRule>