force-app/main/default/objects/OrderItem/validationRules/ValidatePrice.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidatePrice</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( UnitPrice )</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>This field is required.</errorMessage>
</ValidationRule>