force-app/main/default/objects/OrderItem/validationRules/ValidateProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateProduct</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Product2Id )</errorConditionFormula>
    <errorDisplayField>Product2Id</errorDisplayField>
    <errorMessage>This field is required.</errorMessage>
</ValidationRule>